--- a/lock/index.html
+++ b/lock/index.html
@@ -24,7 +24,7 @@
 				<header>
 					<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1>抚琴曲委婉</h1>
-					<p style="color: #1F2224;font-size: initial;">做一个小验证，验证成功后打开版块<br/>作者的名字的最后一个字是什么？</p>
+					<p style="color: #1F2224;font-size: initial;">做一个小验证，验证成功后打开版块<br/>Q:作者的名字的最后一个字是什么？</p>
 					<input type="text" name="password" id="password" style="text-align: center;margin-top: 40px;" onkeydown="KeyDown()" onclick="clear1()" />
 				</header>
 				<footer style="margin-top: 40px;">
