--- a/home/index.html
+++ b/home/index.html
@@ -93,7 +93,7 @@
 									<article class="item">
 										<a class="image fit"><img src="images/01.jpg" alt="" /></a>
 										<header>
-											<h3>Beautiful girl</h3>
+											<h3>Delicious food</h3>
 										</header>
 									</article>
 									<article class="item">
