--- a/home/index.html
+++ b/home/index.html
@@ -177,8 +177,8 @@
 							<p style="color: #1F2224;">跑跑单机吧标准化安装包直达快车 ① 号线。</p>
 				
 							<p style="color: black;font-weight: bolder;">
-								<a target="_blank" href="https://github.com/Januarylovelulu/-/raw/master/%E6%B8%B8%E6%88%8F%E5%90%AF%E5%8A%A8%E5%99%A8V3.3(%E5%85%BC%E5%AE%B9XP).exe">跑跑卡丁车单机版启动器</a>
-								<br /><a target="_blank" href="https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q">PP-Kart 2.0下载链接（百度云）</a>提取码：40yu
+								<a target="_blank" href="https://github.com/Januarylovelulu/-/raw/master/%E6%B8%B8%E6%88%8F%E5%90%AF%E5%8A%A8%E5%99%A8V3.3(%E5%85%BC%E5%AE%B9XP).exe">跑跑卡丁车单机版启动器 V3.3</a>
+								<br /><br /><a target="_blank" href="https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q">PP-Kart 2.0下载链接（百度云）</a>提取码：40yu
 								<br /><a target="_blank" href="https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A">PP-Kart 2.1下载链接（百度云）</a>提取码：6e7r
 								<br /><a target="_blank" href="https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A">PP-Kart 3.0下载链接（百度云）</a>提取码：llgq
 								<br /><a target="_blank" href="https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA">Kart-PSM下载链接（百度云）</a>提取码：n39f
@@ -186,16 +186,7 @@
 								<br /><a target="_blank" href="https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg">KartRider Evolved下载链接（百度云）</a>提取码：uvy6
 							</p>
 							<p style="color: #242629;font-size: medium;">如果 ① 号线载点出现问题或被严重限速，可以转到 ② 号线下载。</p>
-							<p style="color: black;font-weight: bolder;">② 号线（跑友公社·资源区）：623756886
-								<br />（包含 ① 号线的 6 个版本及 32M 复古驾照版本）
-								<br />资源区下载方法：
-								<br />打开电脑版 QQ →查找好友→搜索群 623756886 →
-								<br />点击“加入”左侧的“进入”→切换到“文件”选项卡→选择想玩的版本→右键另存至任意目录。
-								<br />（推荐下载到桌面，操作更方便）
-								<br />跑跑单机吧所有载点、所有版本均支持 Windows XP 。
-								<br />跑跑单机吧版《跑跑卡丁车·进化》（《KartRider Evolved》）已集成闪退修复工具，
-								<br />Windows 10 系统遇到闪退问题可以尝试使用这套工具进行修复。具体步骤见《游戏时遇到问题？点我！》
-							</p>
+							<p style="color: black;font-weight: bolder;">② 号线（跑友公社·资源QQ群）：623756886</p>
 							
 							<p style="font-size: medium;color: #222222;">
 								<br />小时候，有人给我讲了一个美好的故事<br />
