--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						</header>
 						<footer>
 							<ul class="icons">
-								<li><a href="/Januarylovelulu.github.io/home/index.html" class="fa-home">Home</a></li>
+								<li><a id="home" href="/Januarylovelulu.github.io/home/index.html" class="fa-home" onkeydown="KeyDown()">Home</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -47,6 +47,6 @@
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 				}
 			</script>
-
+			
 	</body>
 </html>
