--- a/time/index.html
+++ b/time/index.html
@@ -12,6 +12,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	<script>
+		alert("此版块暂不开放");
+		history.back();
+	</script>
 	<body class="is-preload" onload="checkElementLegal()">
 
 		<!-- Header -->
