--- a/index/index.html
+++ b/index/index.html
@@ -1,7 +1,7 @@
 游戏启动器：：3.4：：https://github.com/Januarylovelulu/-/raw/master/%E6%B8%B8%E6%88%8F%E5%90%AF%E5%8A%A8%E5%99%A8V3.4.exe
 2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu
 2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r
-3.0：：https://pan.ba idu.c om/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq
-PSM：：https://pa n.bai du.co m/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f
-Youhua：：https://pan.baidu.com/s/1uIBxERfjG17C9zpzpQRlzQ：：提取码：：3ou1
-Jinhua：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6
+3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq
+PSM：：https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f
+优化：：https://pan.baidu.com/s/1uIBxERfjG17C9zpzpQRlzQ：：提取码：：3ou1
+进化：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6
