--- a/index/index.html
+++ b/index/index.html
@@ -2,6 +2,6 @@
 2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu
 2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r
 3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq
-psm：：https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f
+PSM：：https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f
 优化：：https://pan.baidu.com/s/1uIBxERfjG17C9zpzpQRlzQ：：提取码：：3ou1
 进化：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6
