--- a/home/index.html
+++ b/home/index.html
@@ -177,7 +177,7 @@
 							<p style="color: #1F2224;">跑跑单机吧标准化安装包直达快车 ① 号线。</p>
 				
 							<p style="color: black;font-weight: bolder;">
-								<a target="_blank" href="https://github.com/Januarylovelulu/-/raw/master/%E6%B8%B8%E6%88%8F%E5%90%AF%E5%8A%A8%E5%99%A8V3.3(%E5%85%BC%E5%AE%B9XP).exe">跑跑卡丁车单机版启动器 V3.3</a>
+								<a target="_blank" href="https://github.com/Januarylovelulu/-/raw/master/%E6%B8%B8%E6%88%8F%E5%90%AF%E5%8A%A8%E5%99%A8V3.4.exe">跑跑卡丁车单机版启动器 V3.4</a>
 								<br /><br /><a target="_blank" href="https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q">PP-Kart 2.0下载链接（百度云）</a>提取码：40yu
 								<br /><a target="_blank" href="https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A">PP-Kart 2.1下载链接（百度云）</a>提取码：6e7r
 								<br /><a target="_blank" href="https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A">PP-Kart 3.0下载链接（百度云）</a>提取码：llgq
