--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						</header>
 						<footer>
 							<ul class="icons">
-								<li><a id="home" href="/Januarylovelulu.github.io/home/index.html" class="fa-home" onkeydown="KeyDown()">Home</a></li>
+								<li><a id="home" href="./home/index.html" class="fa-home" onkeydown="KeyDown()">Home</a></li>
 							</ul>
 						</footer>
 					</section>
