--- a/picture/index.html
+++ b/picture/index.html
@@ -167,7 +167,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="/Januarylovelulu.github.io/lock/login.js"></script>
+			<script src="../lock/login.js"></script>
 
 	</body>
 </html>
