--- a/lock/index.html
+++ b/lock/index.html
@@ -40,6 +40,10 @@
 					<li>&copy; 璐璐</li>
 					<li>Design: 抚琴曲委婉</li>
 				</ul>
+				
+				<ul class="copyright">
+					<a href="http://www.beian.miit.gov.cn/">渝ICP备19006790号</a>
+				</ul>
 			</footer>
 
 		</div>
