--- a/text/index.html
+++ b/text/index.html
@@ -86,7 +86,7 @@
 
 
 				<!-- Four -->
-					<section class="wrapper style1 align-center" style="display: none;" id="Four">
+					<section class="wrapper style1 align-center" style="display: block;" id="Four">
 						<div class="inner">
 							<h2>泰国旅游🇹🇭</h2>
 							<p style="font-size: smaller">2019-01-20至2019-01-25</p>
