--- a/time/index.html
+++ b/time/index.html
@@ -13,10 +13,9 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<script>
-		alert("此版块暂不开放");
-		history.back();
+		
 	</script>
-	<body class="is-preload" onload="checkElementLegal()">
+	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
