--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<title>抚琴曲委婉</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="keywords"content="抚琴曲委婉,抚琴,抚琴曲委婉的空间,跑跑单机,跑跑卡丁车单机"/>
+		<meta name="description" content="这是抚琴曲委婉的个人空间!"/>
+		<meta name="author" content="抚琴曲委婉"/>
 		<link rel="stylesheet" href="index/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="index/assets/css/noscript.css" /></noscript>
 	</head>
