--- a/home/index.html
+++ b/home/index.html
@@ -166,12 +166,12 @@
 			<div class="box220">
 				<h3>照片墙</h3>
 				<p style="color: gray;">树深时见璐，溪午不闻钟<br>弹指一挥间<br>照片中记录着<br>过去的点点滴滴</p>
-				<a class="more" onclick="login('picture')" href="javascript:;">更多</a>
+				<a class="more" onclick="login('picture')" href="javascript:;">跳转到照片墙</a>
 			</div>
 			<div class="box220" style="width: 260px;">
 				<h3>故事空间</h3>
 				<p style="color: gray;">小时候，有人给我讲了一个的故事<br>十年来我苦苦寻找故事的结局<br>如今才发现，这故事才刚刚开始<br>也许我决定不了结果<br>但总能让过程更美丽一些吧</p>
-				<a class="more" onclick="login('text')" href="javascript:;">更多</a>
+				<a class="more" onclick="login('text')" href="javascript:;">跳转到故事空间</a>
 			</div>
 			<div class="box220" style="width: 180px;">
 				<h3>时间轴</h3>
@@ -212,14 +212,11 @@
 		<div class="contain580">
 			<div class="box580">
 				<h3>白蛇：缘起 💞</h3>
-				<div class="box140" style="height: 140px; margin: 0;margin-right: 10px;">
+				<div class="box140 picture" style="height: 140px; margin: 0;margin-right: 10px;">
 					<img src="image_new/4.png" width="100%" height="100%"/>
 				</div>
-				<div class="box140" style="height: 140px; margin: 0;margin-right: 10px;">
+				<div class="box140 picture" style="height: 140px; margin: 0;margin-right: 10px;">
 					<img src="image_new/3.png" width="100%" height="100%"/>
-				</div>
-				<div class="box140" style="height: 140px; margin: 0;margin-right: 10px;">
-					<img src="image_new/5.png" width="100%" height="100%"/>
 				</div>
 				<p style="font-size: 14px;color:gray">
 					超级喜欢这部电影，于是便有了这<br>&lt;&lt;白蛇：缘起&gt;&gt;专题的个人主页。
@@ -228,9 +225,28 @@
 			</div>
 			<div class="box580">
 				<h3>白蛇：缘起 💞</h3>
-				<div class="box340" style="width:380px;height: 380px; margin: 0;margin-right: 10px;">
+				<div class="box140 picture" style="width:140px;height: 140px; margin: 0;margin-right: 10px;">
 					<img src="image_new/6.png" width="100%" height="100%"/>
 				</div>
+				<div class="box140 picture" style="width:140px;height: 140px; margin: 0;margin-right: 10px;">
+					<img src="image_new/2.png" width="100%" height="100%"/>
+				</div>
+				<p style="font-size: 14px;color:gray">
+					很高兴，我在电影院里看过
+				</p>
+			</div>
+			<div class="box580">
+				<h3>白蛇：缘起 💞</h3>
+				<div class="box140 picture" style="height: 140px; margin: 0;margin-right: 10px;">
+					<img src="image_new/3.png" width="100%" height="100%"/>
+				</div>
+				<div class="box140 picture" style="height: 140px; margin: 0;margin-right: 10px;">
+					<img src="image_new/5.png" width="100%" height="100%"/>
+				</div>
+				<p style="font-size: 14px;color:gray">
+					超级喜欢这部电影，于是便有了这<br>&lt;&lt;白蛇：缘起&gt;&gt;专题的个人主页。
+				</p>
+				<a href="index_old.html">回到旧版主页</a>
 			</div>
 		</div>
 		<div class="contain340">
@@ -286,10 +302,10 @@
 			<div id="foot_left"><ul class="social">
 				<ul>
 					<li style="text-align: center;line-height: 40px;">
-						联系我：
+						联系我(只有QQ能点，其他是装饰)：
 					</li>
 					<li>
-						<a href="#" title="qq">
+						<a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=907971060" target="class">
 							<div style="background-image: url(image_new/icons.png);background-position: -1036px -1612px;height: 40px;width: 40px;"></div>
 						</a>
 					</li>
@@ -316,5 +332,6 @@
 		</div>
 		<script src="../lock/login.js"></script>
 		<script src="assets/js/pictureMove.js"></script>
+		<script src="assets/js/startMove.js"></script>
 	</body>
 </html>
