--- a/home/index.html
+++ b/home/index.html
@@ -302,7 +302,7 @@
 			<div id="foot_left"><ul class="social">
 				<ul>
 					<li style="text-align: center;line-height: 40px;">
-						联系我(只有QQ能点，其他是装饰)：
+						联系我(Windows下点击添加好友)：
 					</li>
 					<li>
 						<a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=907971060" target="class">
@@ -310,17 +310,17 @@
 						</a>
 					</li>
 					<li>
-						<a href="#" title="wx">
+						<a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=907971060" title="wx">
 							<div style="background-image: url(image_new/icons.png);background-position: -1035px -652px;height: 40px;width: 40px;"></div>
 						</a>
 					</li>
 					<li>
-						<a href="#" title="wb">
+						<a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=907971060" title="wb">
 							<div style="background-image: url(image_new/icons.png);background-position: -1035px -587px;height: 40px;width: 40px;"></div>
 						</a>
 					</li>
 					<li>
-						<a href="#" title="zero">
+						<a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=907971060" title="zero">
 							<div style="background-image: url(image_new/icons.png);background-position: -1035px -524px;height: 40px;width: 40px;"></div>
 						</a>
 					</li>
