--- a/home/index.html
+++ b/home/index.html
@@ -254,7 +254,7 @@
 				<h3>下载专区</h3>
 					<ul>
 						<li>
-							<a href="http://120.79.52.228/index/游戏启动器V3.62.exe" target="_blank">跑跑卡丁车单机版启动器 V3.62</a>
+							<a href="https://www.ruiruiandlulu.online/index/游戏启动器V3.62.exe" target="_blank">跑跑卡丁车单机版启动器 V3.62</a>
 						</li>
 						<li>
 							<a href="https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q" target="_blank">PP-Kart 2.0</a><span>提取码：40yu</span> 
