--- a/home/index_old.html
+++ b/home/index_old.html
@@ -177,7 +177,7 @@
 							<p style="color: #1F2224;">跑跑单机吧标准化安装包直达快车 ① 号线。</p>
 				
 							<p style="color: black;font-weight: bolder;">
-								<a target="_blank" href="http://120.79.52.228/index/游戏启动器V3.62.exe">跑跑卡丁车单机版启动器 V3.62</a>
+								<a target="_blank" href="https://www.ruiruiandlulu.online/index/游戏启动器V3.62.exe">跑跑卡丁车单机版启动器 V3.62</a>
 								<br /><br /><a target="_blank" href="https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q">PP-Kart 2.0下载链接（百度云）</a>提取码：40yu
 								<br /><a target="_blank" href="https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A">PP-Kart 2.1下载链接（百度云）</a>提取码：6e7r
 								<br /><a target="_blank" href="https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A">PP-Kart 3.0下载链接（百度云）</a>提取码：llgq
