--- a/jQuery/checkOut.html
+++ b/jQuery/checkOut.html
@@ -29,8 +29,8 @@
 			<div id="deleteAll" class="box120" style="width: 130px;cursor: pointer;">删除所有商品</div>
 			<div id="deleteAll" class="box120" onclick="location.href='./index.html'" style="margin-left: 50px;width: 130px;cursor: pointer;">返回首页选择</div>
 			<div class="box120 foot_right" style="border: 1px white solid;cursor: pointer;border-radius: 10px;">结算</div>
-			<div id="priceAll" class="box120 foot_right"></div>
-			<div class="box120 foot_right">合计：￥</div>
+			<div id="priceAll" class="box120 foot_right"  style="text-align: left;margin-left: 0;"></div>
+			<div class="box120 foot_right" style="text-align: right;margin-right: 0;">合计：￥</div>
 			<div id="totalGoods" class="box200 foot_right">已选商品0件</div>
 		</div>
 	</body>
