--- a/小米官网/index.html
+++ b/小米官网/index.html
@@ -43,8 +43,9 @@
 					<div class="navi_top box720"></div>
 					<div class="navi_top box240"></div>
 				</div>
-				<div class="contain1200">
+				<div id="naviBigPicture" class="contain1200">
 					<div class="navi box240"></div>
+					<div class="navi box1200"></div>
 					<div class="navi box960"></div>
 				</div>
 				<div class="contain1200">
@@ -89,7 +90,6 @@
 					<div class="box240 title right">查看全部</div>
 				</div>
 				<div class="contain1200">
-					<div class="big box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
@@ -98,6 +98,9 @@
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
+					<div class="small box240"></div>
+					<div class="smaller box240"></div>
+					<div class="smaller box240"></div>
 				</div>
 				<div class="box1200 pictureTitle"></div>
 			</div>
@@ -107,7 +110,6 @@
 					<div class="box240 title right">查看全部</div>
 				</div>
 				<div class="contain1200">
-					<div class="big box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
@@ -116,6 +118,9 @@
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
+					<div class="small box240"></div>
+					<div class="smaller box240"></div>
+					<div class="smaller box240"></div>
 				</div>
 				<div class="box1200 pictureTitle"></div>
 			</div>
@@ -125,7 +130,6 @@
 					<div class="box240 title right">查看全部</div>
 				</div>
 				<div class="contain1200">
-					<div class="big box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
@@ -134,6 +138,9 @@
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
+					<div class="small box240"></div>
+					<div class="smaller box240"></div>
+					<div class="smaller box240"></div>
 				</div>
 				<div class="box1200 pictureTitle"></div>
 			</div>
@@ -143,7 +150,6 @@
 					<div class="box240 title right">查看全部</div>
 				</div>
 				<div class="contain1200">
-					<div class="big box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
@@ -152,6 +158,9 @@
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
+					<div class="small box240"></div>
+					<div class="smaller box240"></div>
+					<div class="smaller box240"></div>
 				</div>
 				<div class="box1200 pictureTitle"></div>
 			</div>
@@ -161,7 +170,6 @@
 					<div class="box240 title right">查看全部</div>
 				</div>
 				<div class="contain1200">
-					<div class="big box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
@@ -170,6 +178,9 @@
 					<div class="small box240"></div>
 					<div class="small box240"></div>
 					<div class="small box240"></div>
+					<div class="small box240"></div>
+					<div class="smaller box240"></div>
+					<div class="smaller box240"></div>
 				</div>
 				<div class="box1200 pictureTitle"></div>
 			</div>
