--- a/小米官网/index.html
+++ b/小米官网/index.html
@@ -54,18 +54,18 @@
 					<div class="navi_body box320"></div>
 					<div class="navi_body box320"></div>
 				</div>
-				<div class="contain1200 center">
-					<div class="box1200 title">小米闪购</div>
-					<div class="navi_foot box240"></div>
-					<div class="navi_foot box240"></div>
-					<div class="navi_foot box240"></div>
-					<div class="navi_foot box240"></div>
-					<div class="navi_foot box240"></div>
-					<div class="box1200 pictureTitle"></div>
-				</div>
 			</div>
 		</div>
 		<div id="body" class="containAll">
+			<div class="contain1200 center">
+				<div class="box1200 title">小米闪购</div>
+				<div class="xiaomi_flashPurchase box240"></div>
+				<div class="xiaomi_flashPurchase box240"></div>
+				<div class="xiaomi_flashPurchase box240"></div>
+				<div class="xiaomi_flashPurchase box240"></div>
+				<div class="xiaomi_flashPurchase box240"></div>
+				<div class="box1200 pictureTitle"></div>
+			</div>
 			<div class="contain1200 center" attr="手机">
 				<div class="contain1200">
 					<div class="box240 title">手机</div>
@@ -184,14 +184,14 @@
 				</div>
 				<div class="box1200 pictureTitle"></div>
 			</div>
-			<div class="contain1200 center">
+			<!-- <div class="contain1200 center">
 				<div class="box1200 title">为你推荐</div>
 				<div class="for_you box240"></div>
 				<div class="for_you box240"></div>
 				<div class="for_you box240"></div>
 				<div class="for_you box240"></div>
 				<div class="for_you box240"></div>
-			</div>
+			</div> -->
 			<div class="contain1200 center">
 				<div class="box1200 title">热评产品</div>
 				<div class="hot_goods box300"></div>
@@ -221,7 +221,6 @@
 		</div>
 		<div id="foot" class="containAll">
 			<div class="contain1200 center">
-				<div class="box1200 title">为你推荐</div>
 				<div class="service box240"></div>
 				<div class="service box240"></div>
 				<div class="service box240"></div>
