--- a/index.html
+++ b/index.html
@@ -1,51 +1,57 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>抚琴曲委婉</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="keywords"content="抚琴曲委婉,抚琴,抚琴曲委婉的空间,跑跑单机,跑跑卡丁车单机"/>
-		<meta name="description" content="这是抚琴曲委婉的个人空间!"/>
-		<meta name="author" content="抚琴曲委婉"/>
-		<link rel="stylesheet" href="index/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="index/assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+    <title>抚琴曲委婉</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="keywords" content="抚琴曲委婉,抚琴,抚琴曲委婉的空间,跑跑单机,跑跑卡丁车单机" />
+    <meta name="description" content="这是抚琴曲委婉的个人空间!" />
+    <meta name="author" content="抚琴曲委婉" />
+    <link rel="stylesheet" href="index/assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="index/assets/css/noscript.css" /></noscript>
+</head>
 
-				<!-- Main -->
-					<section id="main">
-						<header>
-							<span class="avatar"><img src="index/images/avatar.jpg" alt="" /></span>
-							<h1>抚琴曲委婉</h1>
-							<p>一个不想学习的大学生的主页</p>
-						</header>
-						<footer>
-							<ul class="icons">
-								<li><a id="home" href="./home" class="fa-home" onkeydown="KeyDown()">Home</a></li>
-							</ul>
-						</footer>
-					</section>
+<body class="is-preload">
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; 璐璐</li><li>Design: 抚琴曲委婉</li>
-						</ul>
-					</footer>
+    <!-- Wrapper -->
+    <div id="wrapper">
 
-			</div>
+        <!-- Main -->
+        <section id="main">
+            <header>
+                <span class="avatar"><img src="index/images/avatar.jpg" alt="" /></span>
+                <h1>抚琴曲委婉</h1>
+                <p>一个不想学习的大学生的主页</p>
+            </header>
+            <footer>
+                <ul class="icons">
+                    <li><a id="home" href="./home" class="fa-home" onkeydown="KeyDown()">Home</a></li>
+                </ul>
+            </footer>
+        </section>
 
-		<!-- Scripts -->
-			<script>
-				if ('addEventListener' in window) {
-					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
-					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-				}
-			</script>
-			
-			
-	</body>
+        <!-- Footer -->
+        <footer id="footer">
+            <ul class="copyright">
+                <li>&copy; 璐璐</li>
+                <li>Design: 抚琴曲委婉</li>
+            </ul>
+        </footer>
+
+    </div>
+
+    <!-- Scripts -->
+    <script>
+        if ('addEventListener' in window) {
+            window.addEventListener('load', function() {
+                document.body.className = document.body.className.replace(/\bis-preload\b/, '');
+            });
+            document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+        }
+    </script>
+
+
+</body>
+
 </html>
