--- a/index/index.html
+++ b/index/index.html
@@ -1,7 +1,7 @@
-游戏启动器：：1.0：：https://www.ruiruiandlulu.online/index/游戏启动器V3.62.exe
-PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu
-PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r
-PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq
-PP-KartPSM：：https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f
-优化版：：https://pan.baidu.com/s/1uIBxERfjG17C9zpzpQRlzQ：：提取码：：3ou1
-进化版：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6
+游戏启动器：：1.0：：https://www.ruiruiandlulu.online/views/static/index/游戏启动器V3.62.exe
+PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu：：https://www.ruiruiandlulu.online/views/static/index/2.0.exe
+PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r：：https://www.ruiruiandlulu.online/views/static/index/2.1.exe
+PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq：：https://www.ruiruiandlulu.online/views/static/index/3.0.exe
+PP-KartPSM：：https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f：：https://www.ruiruiandlulu.online/views/static/index/PSM.exe
+优化版：：https://pan.baidu.com/s/1uIBxERfjG17C9zpzpQRlzQ：：提取码：：3ou1：：https://www.ruiruiandlulu.online/views/static/index/优化.exe
+进化版：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6：：https://www.ruiruiandlulu.online/views/static/index/进化.exe
