--- a/index/index.html
+++ b/index/index.html
@@ -1,4 +1,4 @@
-游戏启动器：：3.62：：https://www.ruiruiandlulu.online/views/static/index/游戏启动器V3.62.exe
+游戏启动器：：3.62：：https://www.ruiruiandlulu.online/views/static/index/游戏启动器V3.62.exe：：么么哒
 PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu：：https://www.ruiruiandlulu.online/views/static/index/2.0.exe
 PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r：：https://www.ruiruiandlulu.online/views/static/index/2.1.exe
 PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq：：https://www.ruiruiandlulu.online/views/static/index/3.0.exe
