--- a/index/index.html
+++ b/index/index.html
@@ -1,4 +1,4 @@
-游戏启动器：：3.62：：https://www.ruiruiandlulu.online/views/static/index/游戏启动器V3.62.exe：：此版本更新了：^^无^^^^此版本修复了：^^一些小BUG，如：设置中不自动检查更新失效等bug
+游戏启动器：：3.62：：https://www.ruiruiandlulu.online/views/static/index/游戏启动器V3.62.exe：：此版本更新了：^^1.可以在切换版本界面中直接打开对应版本的文件夹^^2.给更换代码的按钮绑定了回车键，换车时可以按回车^^3.打开游戏时平滑移动^^4.细节优化^^^^此版本修复了：^^若干Bug
 PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu：：https://www.ruiruiandlulu.online/views/static/index/2.0.exe
 PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r：：https://www.ruiruiandlulu.online/views/static/index/2.1.exe
 PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq：：https://www.ruiruiandlulu.online/views/static/index/3.0.exe
