--- a/index/index.html
+++ b/index/index.html
@@ -1,4 +1,4 @@
-游戏启动器：：3.7：：https://www.ruiruiandlulu.online/views/static/index/游戏启动器V3.7.exe：：此版本更新了：^^1.优化回车键改车辆的判断逻辑^^2.新增聊天室，在线人数，大家可以在启动器内聊天and提问了！希望大家能友好交流。在菜单界面进入聊天室^^3.细节优化
+游戏启动器：：3.7：：https://www.ruiruiandlulu.online/views/static/index/游戏启动器V3.71.exe：：此版本更新了：^^1.新增显示当前游戏版本标志图片^^2.新增新消息提示^^3.聊天室界面调整
 PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu：：https://www.ruiruiandlulu.online/views/static/index/2.0.exe
 PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r：：https://www.ruiruiandlulu.online/views/static/index/2.1.exe
 PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq：：https://www.ruiruiandlulu.online/views/static/index/3.0.exe
