--- a/index/index.html
+++ b/index/index.html
@@ -1,7 +1,7 @@
 游戏启动器：：3.71：：https://www.ruiruiandlulu.online/views/static/index/游戏启动器V3.71.exe：：此版本更新了：^^1.新增显示当前游戏版本标志图片^^2.新增新消息提示^^3.聊天室界面调整^^^^此版本修改了：^^1.修改了重复打开软件的检测方式，解决了部分用户异常提示此软件已打开的问题
-PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu：：https://www.ruiruiandlulu.online/views/static/index/2.0.exe
-PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r：：https://www.ruiruiandlulu.online/views/static/index/2.1.exe
+PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu
+PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r
 PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq
-PP-KartPSM：：https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f：：https://www.ruiruiandlulu.online/views/static/index/PSM.exe
-优化版：：https://pan.baidu.com/s/1uIBxERfjG17C9zpzpQRlzQ：：提取码：：3ou1：：https://www.ruiruiandlulu.online/views/static/index/优化.exe
-进化版：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6：：https://www.ruiruiandlulu.online/views/static/index/进化.exe
+PP-KartPSM：：https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f
+优化版：：https://pan.baidu.com/s/1uIBxERfjG17C9zpzpQRlzQ：：提取码：：3ou1
+进化版：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6
