--- a/index/index.html
+++ b/index/index.html
@@ -1,4 +1,4 @@
-游戏启动器：：3.72：：https://www.lulu.gold/views/static/index/游戏启动器V3.72.exe：：此版本修复了：^^1.轮播图片与功能不符^^2.因没有管理员权限而无法关闭游戏等操作^^3.由于不明原因，内置下载器在下载游戏时会出现错误的下载完成，现暂时关闭内置下载的渠道，在图片轮播中的下载页可在浏览器中下载
+游戏启动器：：3.73：：https://www.lulu.gold/views/static/index/游戏启动器V3.73.exe：：此版本修复了：^^1.进入聊天室会大概率闪退问题^^^^作者毕业答辩结束，有较多时间，也许会重构这个从大二开始写出来的垃圾代码，谢谢大家支持。
 PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu
 PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r
 PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq
