--- a/index/index.html
+++ b/index/index.html
@@ -1,7 +1,8 @@
-游戏启动器：：3.73：：https://www.lulu.gold/views/static/index/游戏启动器V3.73.exe：：此版本修复了：^^1.进入聊天室会大概率闪退问题^^^^作者毕业答辩结束，有较多时间，也许会重构这个从大二开始写出来的垃圾代码，谢谢大家支持。
+游戏启动器：：3.73：：https://www.lulu.gold/views/static/index/游戏启动器V3.74.exe：：此版本更新了：^^1.支持X游戏版本^^2.引导下载X游戏版本，其中包含X系列车辆，你们盼望的X系列车终于来了。
 PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu
 PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r
 PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq
 PP-KartPSM：：https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f
 优化版：：https://pan.baidu.com/s/1uIBxERfjG17C9zpzpQRlzQ：：提取码：：3ou1
 进化版：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6
+X：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6
