--- a/index/index.html
+++ b/index/index.html
@@ -1,4 +1,4 @@
-游戏启动器：：3.74：：https://www.lulu.gold/views/static/index/游戏启动器V3.74.exe：：此版本更新了：^^1.支持X游戏版本^^2.引导下载X游戏版本，其中包含X系列车辆，你们盼望的X系列车终于来了。
+游戏启动器：：3.74：：https://www.lulu.gold/views/static/index/游戏启动器V3.74.exe：：此版本更新了：^^1.支持X游戏版本（部分支持）^^2.引导下载X游戏版本，其中包含X系列车辆，你们盼望的X系列车终于来了。
 PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu
 PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r
 PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq
