--- a/index/index.html
+++ b/index/index.html
@@ -1,8 +1,8 @@
 游戏启动器：：3.74：：https://www.lulu.gold/views/static/index/游戏启动器V3.74.exe：：此版本更新了：^^1.支持X游戏版本（部分支持）^^2.引导下载X游戏版本，其中包含X系列车辆，你们盼望的X系列车终于来了。
-PP-Kart2.0：：https://pan.baidu.com/s/1rf1tfyNcNYqvXo4TWiEN2Q：：提取码：：40yu
-PP-Kart2.1：：https://pan.baidu.com/s/1hxGB1MBDQP6hQd4Uyn1K0A：：提取码：：6e7r
-PP-Kart3.0：：https://pan.baidu.com/s/1oW7jB7a0zK0TZuG08c94_A：：提取码：：llgq
-PP-KartPSM：：https://pan.baidu.com/s/1pE7V22mBpGRNLpNbzaXcJA：：提取码：：n39f
-优化版：：https://pan.baidu.com/s/1uIBxERfjG17C9zpzpQRlzQ：：提取码：：3ou1
-进化版：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6
-X：：https://pan.baidu.com/s/1BFG0sQlS8z1EVh2ED-0aWg：：提取码：：uvy6
+PP-Kart2.0：：http://120.79.52.228/views/static/index/2.0.exe：：提取码：：40yu
+PP-Kart2.1：：http://120.79.52.228/views/static/index/2.1.exe：：提取码：：6e7r
+PP-Kart3.0：：http://120.79.52.228/views/static/index/3.0.exe：：提取码：：llgq
+PP-KartPSM：：http://120.79.52.228/views/static/index/PSM.exe：：提取码：：n39f
+优化版：：http://120.79.52.228/views/static/index/优化.exe：：提取码：：3ou1
+进化版：：http://120.79.52.228/views/static/index/进化.exe：：提取码：：uvy6
+X：：http://120.79.52.228/views/static/index/X.exe：：提取码：：uvy6
