--- a/index/index.html
+++ b/index/index.html
@@ -1,4 +1,4 @@
-游戏启动器：：3.75：：https://www.lulu.gold/views/static/index/游戏启动器V3.75.exe：：此版本更新了：^^1.优化调整聊天室^^2.开放X系列车的搜索功能^^^^因为作者刚毕业入职，非常忙碌，而X系列是跟以前完全不一样的版本，需要花一定时间去更新启动器，希望各位谅解！
+游戏启动器：：3.76：：https://www.lulu.gold/views/static/index/游戏启动器V3.76.exe：：此版本更新了：^^1.X系列还原初始改装文件的功能^^2.解决聊天室偶尔出现的乱码或文字全变蓝色的问题^^3.更新搜索解决办法模块^^^^因为作者刚毕业入职，非常忙碌，而X系列是跟以前完全不一样的版本，需要花一定时间去更新启动器，希望各位谅解！
 PP-Kart2.0：：http://120.79.52.228/views/static/index/2.0.exe：：提取码：：40yu
 PP-Kart2.1：：http://120.79.52.228/views/static/index/2.1.exe：：提取码：：6e7r
 PP-Kart3.0：：http://120.79.52.228/views/static/index/3.0.exe：：提取码：：llgq
