--- a/index/index.html
+++ b/index/index.html
@@ -1,8 +1,8 @@
-游戏启动器：：3.76：：https://www.lulu.gold/views/static/index/游戏启动器V3.76.exe：：此版本更新了：^^1.X系列还原初始改装文件的功能^^2.解决聊天室偶尔出现的乱码或文字全变蓝色的问题^^3.更新搜索解决办法模块^^^^因为作者刚毕业入职，非常忙碌，而X系列是跟以前完全不一样的版本，需要花一定时间去更新启动器，希望各位谅解！
-PP-Kart2.0：：http://120.79.52.228/views/static/index/2.0.exe：：提取码：：40yu
-PP-Kart2.1：：http://120.79.52.228/views/static/index/2.1.exe：：提取码：：6e7r
-PP-Kart3.0：：http://120.79.52.228/views/static/index/3.0.exe：：提取码：：llgq
-PP-KartPSM：：http://120.79.52.228/views/static/index/PSM.exe：：提取码：：n39f
-优化版：：http://120.79.52.228/views/static/index/优化.exe：：提取码：：3ou1
-进化版：：http://120.79.52.228/views/static/index/进化.exe：：提取码：：uvy6
-X：：http://120.79.52.228/views/static/index/X.exe：：提取码：：uvy6
+游戏启动器：：3.8：：https://lulu.gold/download/游戏启动器V3.8.exe：：此版本更新了：^^1.X系列车代码本将联网更新，无须更新启动器^^2.将所有联网服务移植到服务器中，加快访问速度^^3.优化调整聊天室^^^^此版本修复了:^^1.切换为其他版本后，X的路径失效的问题^^2.一些细节问题
+PP-Kart2.0：：https://lulu.gold/download/2.0.exe：：提取码：：40yu
+PP-Kart2.1：：https://lulu.gold/download/2.1.exe：：提取码：：6e7r
+PP-Kart3.0：：https://lulu.gold/download/3.0.exe：：提取码：：llgq
+PP-KartPSM：：https://lulu.gold/download/PSM.exe：：提取码：：n39f
+优化版：：https://lulu.gold/download/优化.exe：：提取码：：3ou1
+进化版：：https://lulu.gold/download/进化.exe：：提取码：：uvy6
+X：：https://lulu.gold/views/static/index/X.exe：：提取码：：uvy6
