--- a/index/index.html
+++ b/index/index.html
@@ -1,8 +1,8 @@
-游戏启动器：：3.8：：https://lulu.gold/download/游戏启动器V3.8.exe：：此版本更新了：^^1.X系列车代码本将联网更新，无须更新启动器^^2.将所有联网服务移植到服务器中，加快访问速度^^3.优化调整聊天室^^^^此版本修复了:^^1.切换为其他版本后，X的路径失效的问题^^2.一些细节问题
+游戏启动器：：3.81：：https://lulu.gold/download/游戏启动器V3.81.exe：：此版本修复了：^^1.无法在线更新的问题^^2.搜索不 到车代码的问题^^3.修复了其他若干小问题^^^^如果经常玩X版本的一定要更新^^聊天室经过更新不再支持V3.8及以下版本^^和大家说一 声抱歉，这一次发布版本没有经过良好的测试，导致暴露的问题较多。
 PP-Kart2.0：：https://lulu.gold/download/2.0.exe：：提取码：：40yu
 PP-Kart2.1：：https://lulu.gold/download/2.1.exe：：提取码：：6e7r
 PP-Kart3.0：：https://lulu.gold/download/3.0.exe：：提取码：：llgq
 PP-KartPSM：：https://lulu.gold/download/PSM.exe：：提取码：：n39f
 优化版：：https://lulu.gold/download/优化.exe：：提取码：：3ou1
 进化版：：https://lulu.gold/download/进化.exe：：提取码：：uvy6
-X：：https://lulu.gold/views/static/index/X.exe：：提取码：：uvy6
+X：：https://lulu.gold/download/X.exe：：提取码：：uvy6
